# LLMSalon

./: .gitignore  README.md  format_all_scripts.sh  pyproject.toml
examples/: assignment.yaml  rotation.yaml
src/: chatter.py  config.py  entry.py  interface.py  salon.py  settings.yaml  sse_client.py  utils.py
