[project]
name = "llmsalon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp-client-manager>=1.1.2",
    "autoflake>=2.3.1",
    "dynaconf>=3.2.11",
    "gradio>=5.29.0",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "richuru>=0.1.1",
    "ruff>=0.11.8",
    "ty>=0.0.0a7",
]
